--- a/.github/workflows/upload-to-cdn.yaml
+++ b/.github/workflows/upload-to-cdn.yaml
@@ -1,16 +1,16 @@
 name: Upload to CDN
 
-on:
-  create:
+on:  
+  push:
     tags:
-      - v*
+      - 'v1*'
 
 jobs:
   build_and_push:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [10.x]
+        node-version: [16.x]
 
     steps:
       - name: Checkout source
@@ -26,30 +26,35 @@ jobs:
       - name: Set env
         run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
 
-      - id: upload_minified_file
-        uses: google-github-actions/upload-cloud-storage@main
+      - id: 'googleauth'
+        uses: 'google-github-actions/auth@v0'
         with:
-          credentials: ${{ secrets.GCP_CREDENTIALS }}
+          credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
+
+      - id: upload_minified_file
+        uses: google-github-actions/upload-cloud-storage@v0
+        with:
           path: dist/symbl.min.js
           destination: ${{ secrets.GCP_BUCKET_NAME }}/js/beta/symbl-web-sdk/${{ env.RELEASE_VERSION }}
+          parent: false
 
       - id: upload_unminified_file
-        uses: google-github-actions/upload-cloud-storage@main
+        uses: google-github-actions/upload-cloud-storage@v0
         with:
-          credentials: ${{ secrets.GCP_CREDENTIALS }}
           path: dist/symbl.js
           destination: ${{ secrets.GCP_BUCKET_NAME }}/js/beta/symbl-web-sdk/${{ env.RELEASE_VERSION }}
+          parent: false
 
       - id: upload_minified_file_to_latest
-        uses: google-github-actions/upload-cloud-storage@main
+        uses: google-github-actions/upload-cloud-storage@v0
         with:
-          credentials: ${{ secrets.GCP_CREDENTIALS }}
           path: dist/symbl.min.js
           destination: ${{ secrets.GCP_BUCKET_NAME }}/js/beta/symbl-web-sdk/latest
+          parent: false
 
       - id: upload_unminified_file_to_latest
-        uses: google-github-actions/upload-cloud-storage@main
+        uses: google-github-actions/upload-cloud-storage@v0
         with:
-          credentials: ${{ secrets.GCP_CREDENTIALS }}
           path: dist/symbl.js
           destination: ${{ secrets.GCP_BUCKET_NAME }}/js/beta/symbl-web-sdk/latest
+          parent: false
