--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@symblai/symbl-web-sdk",
-  "version": "1.0.4",
+  "version": "1.0.5-beta.3",
   "description": "Symbl.ai Web SDK for accessing Symbl.ai APIs directly from the web browser.",
   "homepage": "https://github.com/symblai/symbl-web-sdk",
   "repository": {
@@ -46,13 +46,9 @@
     "ttypescript": "^1.5.13",
     "typedoc": "^0.22.15",
     "typescript": "^4.3.5",
-    "uglify-js": "^3.15.4",
     "uglifyjs-folder": "^3.1.2",
-    "uglifyjs-webpack-plugin": "^2.2.0",
-    "vinyl-fs": "^3.0.3",
-    "vinyl-source-stream": "^2.0.0",
     "webpack": "^5.72.0",
-    "webpack-cli": "^3.2.1",
+    "webpack-cli": "^4.9.2",
     "webpack-node-externals": "^1.7.2"
   },
   "scripts": {
